# guanlan-regime-factor

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  serve.bat  serve_hidden.vbs  start.bat
.claude/: launch.json
.claude/agents/: guanlan-analyst.md
.claude/skills/factor-allocation/: SKILL.md
.claude/skills/factor-research/: SKILL.md
.claude/skills/quant-research-retriever/: SKILL.md
.claude/skills/regime-radar/: SKILL.md
.github/workflows/: ci.yml
docs/: agent-使用说明.md  architecture.md  before-after.md  portable-agent.md  skills-triggers.md  usage.md  网页使用展示.md
fof/: __init__.py  _compat.py  advice.py  config.py  data.py  engine.py  factors.py  master.py  metrics.py  regime.py  report.py  selection.py  sleeves.py  tables.py  weights.py
outputs/: before_after.json  dashboard.json  factor_allocation.json  factors.json  grid_search.csv  master.json  regime.json
scripts/: daily_refresh.bat  daily_refresh.py  grid_search.py  guanlan_brief.py  make_impact_pdf.py  md_to_pdf.py  open_dashboard.py  run_pipeline.py  setup_schedule.ps1
server/: __init__.py  app.py  chat.py  llm_config.py  refresh.py  requirements.txt
tests/: test_factor_allocation.py  test_factors.py  test_master.py  test_metrics.py  test_perf.py  test_regime.py  test_selection.py  test_sleeves_new.py  test_weights.py
vault/: index.md
vault/wiki/: graph-data.json  knowledge-graph.html  overview.md
web/: app.js  chat.js  factors.html  factors.js  index.html  llm_config.js  refresh.js  styles.css
(+246 files in other folders)
